--- a/form.html
+++ b/form.html
@@ -47,6 +47,7 @@
           console.log(xhr.status)
           if (xhr.status === 201) {
             console.log('Success! Data has been submitted.');
+            window.location.href = 'index.html';
             
           } else {
             console.error('Error occurred while submitting data.');
